# webclaw

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SKILL.md  glama.json  setup.sh
.cargo/: config.toml
.github/workflows/: deps.yml  release.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
benchmarks/: README.md
crates/webclaw-api/: Cargo.toml
crates/webclaw-api/src/: auth.rs  cloud.rs  error.rs  jobs.rs  main.rs  state.rs
crates/webclaw-api/src/routes/: agent.rs  batch.rs  brand.rs  crawl.rs  diff.rs  extract.rs  health.rs  map.rs  mod.rs  scrape.rs  search.rs  summarize.rs
crates/webclaw-cli/src/: main.rs
crates/webclaw-core/src/: data_island.rs  extractor.rs  lib.rs  markdown.rs  noise.rs  structured_data.rs
crates/webclaw-core/src/llm/: mod.rs
crates/webclaw-core/testdata/: express_test.html
crates/webclaw-fetch/: Cargo.toml
crates/webclaw-fetch/src/: client.rs  document.rs  error.rs  lib.rs  reddit.rs  tls.rs
crates/webclaw-llm/src/providers/: ollama.rs
crates/webclaw-mcp/: Cargo.toml
crates/webclaw-mcp/src/: cloud.rs  server.rs
