[package]
name = "webclaw-fetch"
description = "HTTP client with browser TLS fingerprint impersonation via webclaw-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
webclaw-core = { workspace = true }
webclaw-pdf = { path = "../webclaw-pdf" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
webclaw-http = { git = "https://github.com/0xMassi/webclaw-tls" }
url = "2"
rand = "0.8"
quick-xml = { version = "0.37", features = ["serde"] }
serde_json.workspace = true
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
calamine = "0.34"
zip = "2"

[dev-dependencies]
tempfile = "3"
http = "1"
